# Domotic-System-Simulation

./: CMakeLists.txt  DataStructure.cpp  DataStructure.h  Device.h  EntryStructure.h  EventLogger.h  Interface.cpp  Interface.h  ListaDevice.h  README.md  log_example1.txt  log_example2.txt  main.cpp  time.h
